--- a/src/WebUi/views/_template.phtml
+++ b/src/WebUi/views/_template.phtml
@@ -1,5 +1,7 @@
 <?php
 /** @var \TicTacToe\WebUi\View $this */
+/** @var \TicTacToe\Api\ResponseBody\GameState $gameState */
+$gameState = $this->get('gameState');
 ?>
 
 <!doctype html>
@@ -9,16 +11,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="<?php echo $this->basePath('assets/app.css') ?>"/>
     <link rel="stylesheet" href="<?php echo $this->basePath('assets/bootstrap.min.4.3.1.css') ?>"/>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="<?php echo $this->basePath('assets/app.css') ?>"/>
 
     <title>PHP Tic Tac Toe</title>
 </head>
 <body>
-    <?php include __DIR__ . '/_template-check-web-server.phtml'; ?>
+    <main id="main" role="main" class="container-fluid h-100">
+        <?php include __DIR__ . '/_template-check-web-server.phtml'; ?>
+        <?php //include __DIR__ . '/_template-visibility-util.phtml'; ?>
 
-    <?php echo $this->get('content') ?>
+        <?php echo $this->get('content') ?>
+    </main>
 
+    <?php include __DIR__ . '/_template-global-toast.phtml'; ?>
+
+    <script>window.__INITIAL_STATE__ = <?php echo $gameState ? $gameState->toJson() : 'null'; ?></script>
     <script src="<?php echo $this->basePath('assets/app.js') ?>" async></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous" async></script>
 </body>
 </html>
