--- a/src/WebUi/views/_template.phtml
+++ b/src/WebUi/views/_template.phtml
@@ -31,6 +31,7 @@ $gameState = $this->get('gameState');
     <?php include __DIR__ . '/_template-global-toast.phtml'; ?>
 
     <script>window.__INITIAL_STATE__ = <?php echo $gameState ? $gameState->toJson() : 'null'; ?></script>
+    <script>window.__BASE_PATH__ = '<?php echo $this->basePath() ?>'</script>
     <script src="<?php echo $this->basePath('assets/app.js') ?>" async></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
