Add code coverage in HTML format.

--- a/src/WebUi/views/404.phtml
+++ b/src/WebUi/views/404.phtml
@@ -2,5 +2,5 @@
 /** @var \TicTacToe\WebUi\View $this */
 ?>
 
-<h1>It's 404</h1>
+<h1>It's 404 - Page Not Found</h1>
 <p><a href="<?php echo $this->basePath() ?>">Go back to PHP Tic Tac Toe homepage.</a></p>
