--- a/src/WebUi/views/_template-global-toast.phtml
+++ b/src/WebUi/views/_template-global-toast.phtml
@@ -2,12 +2,12 @@
 /** @var \TicTacToe\WebUi\View $this */
 ?>
 
-<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center" style="position: absolute; top: 9vh;width: 100%;left: 0">
-    <div id="global-toast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true" data-delay="10000">
+<div id="global-toast-wrapper" class="d-flex justify-content-center d-none" style="position: absolute; top: 9vh;width: 100%;left: 0">
+    <div id="global-toast" class="toast fade">
         <div class="toast-header">
             <strong id="global-toast-title" class="mr-auto"></strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+            <button type="button" class="ml-2 mb-1 close" id="global-toast-close-button">
+                <span>&times;</span>
             </button>
         </div>
         <div id="global-toast-body" class="toast-body bg-white"></div>
